# woodcut

./: .gitignore  AGENTS.md  ALGORITHM.md  PLAN.md  README.md  SOLUTION.md  docs  pyproject.toml  test_input.txt  woodcut.py
.claude/: instructions.md  launch.json
.claude/skills/solution-doc/: SKILL.md
.claude/skills/woodcut-chrome-e2e/: SKILL.md
.claude/skills/woodcut-preview/: SKILL.md
.github/workflows/: deploy-pages.yml
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
.solution/: 001-20251231-guillotine-cutting-integration.md  002-20260104-multi-tier-placement.md  003-20260110-verification-checklist.md  004-20260418-multi-size-stocks-plan.md  004-20260418-multi-size-stocks.md  005-20260418-stock-shortage-reporting.md  006-20260419-occupancy-hierarchical-backtracking.md  007-20260421-fallback-trim-accuracy.md  008-20260421-partial-count-stacking.md  009-20260421-secondary-row-trim-bounds.md  010-20260421-column-top-guillotine-trim.md  011-20260421-guillotine-tree-refactor.md
design_handoff_woodcut_redesign/: README.md  Woodcut Redesign.html
scripts/: extract_web_dependencies.py
src/woodcut/: __init__.py  cli.py  interactive.py  packing.py  visualizer.py  web.py
src/woodcut/strategies/: __init__.py  aligned_free_space.py  beam_search.py  gnode.py  (+6 more)
tests/: test_comprehensive_validation.py  test_gnode.py  test_multi_stock_integration.py  test_overlap_detection.py  test_stock_selector.py
web/: index.html  server.py
(+9 files in other folders)
