[project]
name = "woodcut"
version = "0.1.0"
description = "MDF 재단 최적화 - Guillotine Cut 알고리즘"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7.0",
]

[project.scripts]
woodcut = "woodcut:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
